hphp/hack/test/typecheck/shape/disable_optional_and_unknown_shape_fields/shape_class_constant.php.exp
File "shape_class_constant.php", line 13, characters 7-11:
Shape uses literal string as field name (Typing[4050])
File "shape_class_constant.php", line 9, characters 7-134:
But expected a class constant
